cluster/apps/nextcloud/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-db
  ports:
    - port: 3306
      targetPort: 3306
